# ai-agent

./: .env.example  README.md  pyproject.toml
src/ai_agent/: __init__.py  __main__.py  config.py  main.py
src/ai_agent/agent/: __init__.py  graph.py  nodes.py  state.py
src/ai_agent/api/: server.py
src/ai_agent/tools/: __init__.py
tests/: test_tools.py
